Repurpose KeystoneWorkers add keystone::wsgi::apache::threads
Now that keystone is run with wsgi apache the KeystoneWorkers
param has no efffect [1]. This repurposes KeystoneWorkers to
now set wsgi::apache::workers and adds the
keystone::wsgi::apache::threads hardcoding to 1 in controller
hieradata.

In master at https://review.openstack.org/#/c/336472/

[1] https://github.com/openstack/puppet-keystone/blob/51c68fb127c28b9748b352871783c3ec6ef5c83b/manifests/init.pp#L396

Closes-Bug: 1598092
Change-Id: Ife898e83efc523e5258dc32a578813acf4fee3fa

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -373,9 +373,9 @@ parameters:
     description: Whether IPtables rules should be purged before setting up the new ones.
     type: boolean
   KeystoneWorkers:
-    default: 0
-    description: Number of workers for Keystone service.
-    type: number
+    type: string
+    description: Set the number of workers for keystone::wsgi::apache
+    default: '"%{::processorcount}"'
   SaharaApiVirtualIP:
     type: string
     default: ''
@@ -1511,8 +1511,7 @@ resources:
                 keystone::endpoint::internal_url: {get_input: keystone_internal_url}
                 keystone::endpoint::admin_url: {get_input: keystone_identity_uri}
                 keystone::endpoint::region: {get_input: keystone_region}
-                keystone::admin_workers: {get_input: keystone_workers}
-                keystone::public_workers: {get_input: keystone_workers}
+                keystone::wsgi::apache::workers: {get_input: keystone_workers}
                 keystone_enable_db_purge: {get_input: keystone_enable_db_purge}
                 keystone::public_endpoint: {get_input: keystone_public_url}
                 # MongoDB
