--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -70,6 +70,7 @@ keystone::config::keystone_config:
     value: 'keystone.contrib.ec2.backends.sql.Ec2'
 keystone::service_name: 'httpd'
 keystone::wsgi::apache::ssl: false
+keystone::wsgi::apache::threads: 1
 
 #swift
 swift::proxy::pipeline:
