Add global_config_settings to services' output
The new global_config_settings output is meant to contain
additional hieradata distributed by the services to all role types.

Change-Id: I1beff8f7b12a4178e6081de6134cd8e67794d710

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -410,7 +410,15 @@ resources:
               params:
                 '%stackname%': {get_param: 'OS::stack_name'}
           NodeIndex: '%index%'
-          ServiceConfigSettings: {get_attr: [ControllerServiceChain, role_data, config_settings]}
+          ServiceConfigSettings:
+            map_merge:
+              - get_attr: [ControllerServiceChain, role_data, config_settings]
+              - get_attr: [ControllerServiceChain, role_data, global_config_settings]
+              - get_attr: [ComputeServiceChain, role_data, global_config_settings]
+              - get_attr: [BlockStorageServiceChain, role_data, global_config_settings]
+              - get_attr: [ObjectStorageServiceChain, role_data, global_config_settings]
+              - get_attr: [CephStorageServiceChain, role_data, global_config_settings]
+              - get_attr: [ControllerServiceChain, role_data, global_config_settings]
           ServiceNames: {get_attr: [ControllerServiceChain, role_data, service_names]}
 
   ComputeServiceChain:
@@ -441,7 +449,14 @@ resources:
               params:
                 '%stackname%': {get_param: 'OS::stack_name'}
           NodeIndex: '%index%'
-          ServiceConfigSettings: {get_attr: [ComputeServiceChain, role_data, config_settings]}
+          ServiceConfigSettings:
+            map_merge:
+              - get_attr: [ComputeServiceChain, role_data, config_settings]
+              - get_attr: [ControllerServiceChain, role_data, global_config_settings]
+              - get_attr: [ComputeServiceChain, role_data, global_config_settings]
+              - get_attr: [BlockStorageServiceChain, role_data, global_config_settings]
+              - get_attr: [ObjectStorageServiceChain, role_data, global_config_settings]
+              - get_attr: [CephStorageServiceChain, role_data, global_config_settings]
           ServiceNames: {get_attr: [ComputeServiceChain, role_data, service_names]}
 
   BlockStorageServiceChain:
@@ -473,7 +488,14 @@ resources:
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
           NodeIndex: '%index%'
-          ServiceConfigSettings: {get_attr: [BlockStorageServiceChain, role_data, config_settings]}
+          ServiceConfigSettings:
+            map_merge:
+              - get_attr: [BlockStorageServiceChain, role_data, config_settings]
+              - get_attr: [ControllerServiceChain, role_data, global_config_settings]
+              - get_attr: [ComputeServiceChain, role_data, global_config_settings]
+              - get_attr: [BlockStorageServiceChain, role_data, global_config_settings]
+              - get_attr: [ObjectStorageServiceChain, role_data, global_config_settings]
+              - get_attr: [CephStorageServiceChain, role_data, global_config_settings]
           ServiceNames: {get_attr: [BlockStorageServiceChain, role_data, service_names]}
 
   ObjectStorageServiceChain:
@@ -505,7 +527,14 @@ resources:
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
           NodeIndex: '%index%'
-          ServiceConfigSettings: {get_attr: [ObjectStorageServiceChain, role_data, config_settings]}
+          ServiceConfigSettings:
+            map_merge:
+              - get_attr: [ObjectStorageServiceChain, role_data, config_settings]
+              - get_attr: [ControllerServiceChain, role_data, global_config_settings]
+              - get_attr: [ComputeServiceChain, role_data, global_config_settings]
+              - get_attr: [BlockStorageServiceChain, role_data, global_config_settings]
+              - get_attr: [ObjectStorageServiceChain, role_data, global_config_settings]
+              - get_attr: [CephStorageServiceChain, role_data, global_config_settings]
           ServiceNames: {get_attr: [ObjectStorageServiceChain, role_data, service_names]}
 
   CephStorageServiceChain:
@@ -537,7 +566,14 @@ resources:
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
           NodeIndex: '%index%'
-          ServiceConfigSettings: {get_attr: [CephStorageServiceChain, role_data, config_settings]}
+          ServiceConfigSettings:
+            map_merge:
+              - get_attr: [CephStorageServiceChain, role_data, config_settings]
+              - get_attr: [ControllerServiceChain, role_data, global_config_settings]
+              - get_attr: [ComputeServiceChain, role_data, global_config_settings]
+              - get_attr: [BlockStorageServiceChain, role_data, global_config_settings]
+              - get_attr: [ObjectStorageServiceChain, role_data, global_config_settings]
+              - get_attr: [CephStorageServiceChain, role_data, global_config_settings]
           ServiceNames: {get_attr: [CephStorageServiceChain, role_data, service_names]}
 
   ControllerIpListMap:
