Customize scheduler_default_filters (nova.conf)
Allow the operator to customize the default scheduler filters
via THT, which shall be required for NFV features like DPDK,
SRIOV.

Implements: blueprint tripleo-ovs-dpdk

Change-Id: I0f1f3330e7aefcf5289c2ea0651e7e6ed302bf5e
Signed-off-by: karthik s <ksundara@redhat.com>

--- a/puppet/services/nova-scheduler.yaml
+++ b/puppet/services/nova-scheduler.yaml
@@ -22,6 +22,13 @@ parameters:
     default: []
     description: List of scheduler available filters
     type: comma_delimited_list
+  NovaSchedulerDefaultFilters:
+    type: comma_delimited_list
+    default: []
+    description: >
+      An array of filters used by Nova to filter a node.These filters will be
+      applied in the order they are listed, so place your most restrictive
+      filters first to make the filtering process more efficient.
 
 resources:
   NovaBase:
@@ -41,5 +48,6 @@ outputs:
           - get_attr: [NovaBase, role_data, config_settings]
           - nova::scheduler::filter::ram_allocation_ratio: '1.0'
             nova::scheduler::filter::scheduler_available_filters: {get_param: NovaSchedulerAvailableFilters}
+            nova::scheduler::filter::scheduler_default_filters: {get_param: NovaSchedulerDefaultFilters}
       step_config: |
         include tripleo::profile::base::nova::scheduler
