--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -305,6 +305,12 @@ resources:
           get_param: UpdateIdentifier
 
 outputs:
+  ip_address:
+    description: IP address of the server in the ctlplane network
+    value: {get_attr: [CephStorage, networks, ctlplane, 0]}
+  hostname:
+    description: Hostname of the server
+    value: {get_attr: [CephStorage, name]}
   hosts_entry:
     value:
       str_replace:
