--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -306,6 +306,12 @@ resources:
           get_param: UpdateIdentifier
 
 outputs:
+  ip_address:
+    description: IP address of the server in the ctlplane network
+    value: {get_attr: [BlockStorage, networks, ctlplane, 0]}
+  hostname:
+    description: Hostname of the server
+    value: {get_attr: [BlockStorage, name]}
   hosts_entry:
     value:
       str_replace:
