--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -504,6 +504,7 @@ parameters:
       - OS::TripleO::Services::CinderApi
       - OS::TripleO::Services::CinderScheduler
       - OS::TripleO::Services::CinderVolume
+      - OS::TripleO::Services::Kernel
       - OS::TripleO::Services::Keystone
       - OS::TripleO::Services::GlanceApi
       - OS::TripleO::Services::GlanceRegistry
@@ -547,6 +548,7 @@ parameters:
       - OS::TripleO::Services::Snmp
       - OS::TripleO::Services::NovaCompute
       - OS::TripleO::Services::NovaLibvirt
+      - OS::TripleO::Services::Kernel
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Compute Nodes.
@@ -578,6 +580,7 @@ parameters:
   BlockStorageServices:
     default:
       - OS::TripleO::Services::CinderVolume
+      - OS::TripleO::Services::Kernel
       - OS::TripleO::Services::Ntp
       - OS::TripleO::Services::Timezone
     description: A list of service resources (configured in the Heat
@@ -610,6 +613,7 @@ parameters:
     default: {}
   ObjectStorageServices:
     default:
+      - OS::TripleO::Services::Kernel
       - OS::TripleO::Services::Ntp
       - OS::TripleO::Services::SwiftStorage
       - OS::TripleO::Services::Snmp
@@ -647,6 +651,7 @@ parameters:
   CephStorageServices:
     default:
       - OS::TripleO::Services::CephOSD
+      - OS::TripleO::Services::Kernel
       - OS::TripleO::Services::Ntp
       - OS::TripleO::Services::Timezone
     description: A list of service resources (configured in the Heat
