Template param for what command occ runs
The ConfigCommand parameter overrides the server resource metadata to
specify what command os-collect-config runs whenever any configuration
data changes.

The default is already 'os-refresh-config' so this change has no
effect but it allows a future change to specify an
os-refresh-config --timeout argument to fix bug #1595722.

Change-Id: I8dd35b6724d8c00e5495faca84ee8fee77641b82
Partial-Bug: #1595722

--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -91,10 +91,17 @@ parameters:
   ServiceConfigSettings:
     type: json
     default: {}
+  ConfigCommand:
+    type: string
+    description: Command which will be run whenever configuration data changes
+    default: os-refresh-config
 
 resources:
   BlockStorage:
     type: OS::Nova::Server
+    metadata:
+      os-collect-config:
+        command: {get_param: ConfigCommand}
     properties:
       image:
         {get_param: Image}
