--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -316,11 +316,18 @@ parameters:
   ServiceConfigSettings:
     type: json
     default: {}
+  ConfigCommand:
+    type: string
+    description: Command which will be run whenever configuration data changes
+    default: os-refresh-config
 
 resources:
 
   NovaCompute:
     type: OS::Nova::Server
+    metadata:
+      os-collect-config:
+        command: {get_param: ConfigCommand}
     properties:
       image:
         {get_param: Image}
