--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -390,6 +390,10 @@ parameters:
   ServiceConfigSettings:
     type: json
     default: {}
+  ConfigCommand:
+    type: string
+    description: Command which will be run whenever configuration data changes
+    default: os-refresh-config
 
 parameter_groups:
 - label: deprecated
@@ -401,6 +405,9 @@ resources:
 
   Controller:
     type: OS::Nova::Server
+    metadata:
+      os-collect-config:
+        command: {get_param: ConfigCommand}
     properties:
       image: {get_param: Image}
       image_update_policy: {get_param: ImageUpdatePolicy}
