--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -112,11 +112,18 @@ parameters:
   ServiceConfigSettings:
     type: json
     default: {}
+  ConfigCommand:
+    type: string
+    description: Command which will be run whenever configuration data changes
+    default: os-refresh-config
 
 resources:
 
   SwiftStorage:
     type: OS::Nova::Server
+    metadata:
+      os-collect-config:
+        command: {get_param: ConfigCommand}
     properties:
       image: {get_param: Image}
       flavor: {get_param: Flavor}
