Set os-refresh-config timeout to 4 hours
This change uses the new os-refresh-config --timeout argument to set a
kill timeout for stalled os-refresh-config runs.

4 hours is a reasonable conservative value since it matches the stack
timeout - but it can be set shorter in the future based on actual run
times.

Change-Id: I433f558515df24736263ec0d50de08ad8f78498f
Closes-Bug: #1595722
DependsOn: Ibcbb2090aed126abec8dac49efa53ecbdb2b9b2c

--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -115,7 +115,7 @@ parameters:
   ConfigCommand:
     type: string
     description: Command which will be run whenever configuration data changes
-    default: os-refresh-config
+    default: os-refresh-config --timeout 14400
 
 resources:
 
