--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -393,7 +393,7 @@ parameters:
   ConfigCommand:
     type: string
     description: Command which will be run whenever configuration data changes
-    default: os-refresh-config
+    default: os-refresh-config --timeout 14400
 
 parameter_groups:
 - label: deprecated
