Remove config_identifier from all_nodes extraconfig examples
Since https://review.openstack.org/#/c/315616 this is no longer
required.

Change-Id: I0452d1577a25d19b4351bfe7830a6c7bbe485e67

--- a/extraconfig/all_nodes/default.yaml
+++ b/extraconfig/all_nodes/default.yaml
@@ -20,8 +20,6 @@ parameters:
 # Note extra parameters can be defined, then passed data via the
 # environment parameter_defaults, without modifying the parent template
 
-outputs:
-  # This value should change if the configuration data has changed
-  # It is used to e.g re-apply puppet after hieradata values change.
-  config_identifier:
-    value: none
+#outputs:
+  # Outputs can be passed here and inspected via heat, but they are not
+  # consumed by the parent template
