Convert AllNodesExtraConfig to OS::Heat::None
Instead of creating a nested stack, as it's slightly lower overhead
and will make things easier when adding custom roles (where a
hard-coded default template can't work)

Change-Id: If9f8294ba477d1c1364e19a52152905a2c02e959

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -50,7 +50,8 @@ resource_registry:
   # phase, e.g when puppet is applied, but after the pre_deploy phase.  Useful when
   # configuration with knowledge of all nodes in the cluster is required vs single
   # node configuration in the pre_deploy step.
-  OS::TripleO::AllNodesExtraConfig: extraconfig/all_nodes/default.yaml
+  # See extraconfig/all_nodes/* for examples
+  OS::TripleO::AllNodesExtraConfig: OS::Heat::None
 
   # TripleO overcloud networks
   OS::TripleO::Network: network/networks.yaml
