--- a/puppet/swift-devices-and-proxy-config.yaml
+++ b/puppet/swift-devices-and-proxy-config.yaml
@@ -20,7 +20,7 @@ resources:
           datafiles:
             swift_devices_and_proxy:
               mapped_data:
-                tripleo::ringbuilder::devices:
+                tripleo::profile::base::swift::ringbuilder::devices:
                   list_join:
                   - ", "
                   - - list_join:
