Restore the NtpServer parameter name
In 296bffde893dbbf36c62d664e24e2584b89b8070 we moved the NTP
into a composable service but changed the name of the parameter
to NtpServers. This will break upgrades for users of the previous
parameter name.

Closes-bug: #1599526

Change-Id: I896b9427416f01b603ac9cc4d8c9ebf5e019cb32

--- a/puppet/services/time/ntp.yaml
+++ b/puppet/services/time/ntp.yaml
@@ -12,7 +12,7 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
-  NtpServers:
+  NtpServer:
     default: []
     description: NTP servers
     type: comma_delimited_list
@@ -22,6 +22,6 @@ outputs:
     description: Role ntp using composable services.
     value:
       config_settings:
-        ntp::ntpservers: {get_param: NtpServers}
+        ntp::ntpservers: {get_param: NtpServer}
       step_config: |
         include ::ntp
